Prepared for deploy

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ football_tournament/tournament/__pycache__/
 football_tournament/tournament/templatetags/__pycache__/
 football_tournament/staticfiles
 football_tournament/tournament/migrations/__pycache__/
+football_tournament/db.sqlite3
